# ai-invention-8ea2f1-semantic-risk-evidence-development-trian

./: README.md
paper_latex/workspace/: .terminal_claude_agent_struct_out.json  convert_pages.py  paper.aux  paper.bbl  paper.blg  paper.out  paper.tex  references.bib
round-1/dataset-1/: README.md
round-1/dataset-1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
round-1/dataset-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  articles_partial.json  build_dataset.py  data.py  full_data_out.json  mini_data_out.json  pyproject.toml  scenarios_generated.json
round-1/experiment-1/: README.md
round-1/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-1/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
round-1/research-1/: README.md
round-1/research-1/src/: .aii_cost_ledger.jsonl  .terminal_claude_agent_struct_out.json  research_out.json  research_report.md
round-2/evaluation-1/: README.md
round-2/evaluation-1/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
round-2/evaluation-1/src/: .terminal_claude_agent_struct_out.json  eval.py  eval_out.json  full_eval_out.json  preview_eval_out.json  pyproject.toml
round-2/experiment-1/: README.md
round-2/experiment-1/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
round-2/experiment-1/src/: .terminal_claude_agent_struct_out.json  full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
