[project]
name = "sredt-experiment"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "distro==1.9.0",
    "filelock==3.29.4",
    "fsspec==2026.4.0",
    "gdeltdoc==1.12.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.19.0",
    "idna==3.18",
    "jinja2==3.1.6",
    "jiter==0.15.0",
    "joblib==1.5.3",
    "loguru==0.7.3",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mpmath==1.3.0",
    "narwhals==2.22.1",
    "networkx==3.6.1",
    "numpy==2.4.6",
    "openai==2.41.1",
    "packaging==26.2",
    "pandas==3.0.3",
    "platformdirs==4.4.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "pydantic-core==2.46.4",
    "pygments==2.20.0",
    "python-dateutil==2.9.0.post0",
    "pyyaml==6.0.3",
    "regex==2026.5.9",
    "requests==2.34.2",
    "rich==15.0.0",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentence-transformers==5.5.1",
    "setuptools==81.0.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tomli==2.4.0",
    "torch==2.12.0",
    "tqdm==4.68.2",
    "transformers==5.12.0",
    "typing-extensions==4.15.0",
    "urllib3==2.7.0",
]
