[project]
name = "sredt-pipeline"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "loguru==0.7.3",
    "numpy==2.4.6",
    "openai==2.41.1",
    "pandas==3.0.3",
    "psutil==7.2.2",
    "requests==2.34.2",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "sentence-transformers==5.5.1",
    "torch==2.12.0+cpu",
]
